Fix "evolve API" on mobile
When <1020px, text-align center was too broadly applied, causing other aspects of the UI to be misaligned.

Fixes #231

--- a/site/_css/index.less
+++ b/site/_css/index.less
@@ -281,7 +281,9 @@ body.index {
     min-height: 75vh;
     @media screen and (max-width: 1019px) {
       min-height: none;
-      text-align: center;
+      .prose {
+        text-align: center;
+      }
     }
   }
 
